Initial commit: Simple Translation mod

--- a/CONFIG_EXAMPLE.json
+++ b/CONFIG_EXAMPLE.json
@@ -1,16 +1,35 @@
 {
-  "enabled": true,
-  "apiType": "llm",
+  "enabled": false,
+  "apiType": "free",
   "baiduAppId": "",
   "baiduSecretKey": "",
-  "llmProvider": "deepseek",
-  "llmApiKey": "sk-你的真实API密钥",
+  "baiduLLMApiKey": "",
+  "baiduLLMSecretKey": "",
+  "baiduLLMModel": "ernie-4.0-turbo-8k",
+  "llmApiKey": "",
   "llmApiUrl": "",
   "llmModel": "",
+  "llmSystemPrompt": "",
   "sourceLang": "auto",
   "targetLang": "zh",
-  "showOriginal": true,
-  "autoTranslate": true,
-  "translationDelay": 500
+  "showOriginal": false,
+  "autoTranslate": false,
+  "translateBook": false,
+  "translateSign": false,
+  "translateTooltip": false,
+  "translateChatTooltip": false,
+  "translateAdvancements": false,
+  "translateEntityName": false,
+  "translateTitleCommand": false,
+  "translateActionbar": false,
+  "translateScoreboard": false,
+  "translateBossBar": false,
+  "translateTextDisplay": false,
+  "signTranslationMode": "range",
+  "translateSignOnSneak": false,
+  "showSignTranslationMessages": false,
+  "translationDelay": 500,
+  "persistentCache": false,
+  "perWorldCache": false
 }
 
