--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,49 @@
-# gradle
-
+# Gradle
 .gradle/
 build/
 out/
 classes/
+.gradletasknamecache
 
-# eclipse
-
+# Eclipse
 *.launch
+.settings/
+bin/
+.classpath
+.project
 
-# idea
-
+# IntelliJ IDEA
 .idea/
 *.iml
 *.ipr
 *.iws
 
-# vscode
-
-.settings/
+# VS Code
 .vscode/
-bin/
-.classpath
-.project
+.settings/
 
-# macos
-
+# macOS
 *.DS_Store
 
-# fabric
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
 
+# Fabric
 run/
+remappedSrc/
 
-# java
-
+# Java
 hs_err_*.log
 replay_*.log
 *.hprof
 *.jfr
+
+# Local configuration files (if any)
+local.properties
+*.local
+
+# Mod development
+*.jar
+!gradle/wrapper/gradle-wrapper.jar
